feat: tests, db tables; fix: docker
